[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets_old/dialog/bg1.png" type="Texture" id=1]
[ext_resource path="res://Menu/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://assets_old/dialog/moleR1.png" type="Texture" id=3]
[ext_resource path="res://Menu/UIThemeSmall.tres" type="Theme" id=4]
[ext_resource path="res://Cutscene/Cutscene.gd" type="Script" id=5]

[node name="Cutscene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MarginContainer"]
margin_right = 720.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 720.0
margin_bottom = 1080.0

[node name="SkipContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 41.0
alignment = 2

[node name="SkipButton" type="Button" parent="MarginContainer/VBoxContainer/SkipContainer"]
margin_left = 608.0
margin_right = 720.0
margin_bottom = 41.0
theme = ExtResource( 4 )
text = "Skip"

[node name="CharContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 720.0
margin_bottom = 472.0
alignment = 1

[node name="CharLeft" type="TextureRect" parent="MarginContainer/VBoxContainer/CharContainer"]
margin_left = 118.0
margin_right = 358.0
margin_bottom = 427.0
texture = ExtResource( 3 )

[node name="CharRight" type="TextureRect" parent="MarginContainer/VBoxContainer/CharContainer"]
margin_left = 362.0
margin_right = 602.0
margin_bottom = 427.0
texture = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 720.0
margin_bottom = 1080.0
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="DialogBox" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 594.0
size_flags_vertical = 3
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Hey kids wanna drink some milk"
text = "Hey kids wanna drink some milk"
